# macwinshare

./: Cargo.toml  WINDOWS_TESTING.md  index.html  package-lock.json  package.json
crates/core/: Cargo.toml
crates/core/src/: client.rs  clipboard.rs  config.rs  discovery.rs  encryption.rs  error.rs  lib.rs  platform.rs  protocol.rs  screen.rs  server.rs
crates/core/tests/: integration.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: accessibility.rs  display.rs  input.rs  lib.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: display.rs  input.rs  lib.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
