[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/platform-macos",
    "crates/platform-windows",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MacWinShare Contributors"]
license = "GPL-2.0"
repository = "https://github.com/macwinshare/macwinshare"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"

# Networking
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.14"
webpki = "0.22"

# Discovery
mdns-sd = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
local-ip-address = "0.6"

# Clipboard
arboard = "3.4"

# Testing
tempfile = "3.14"
tokio-test = "0.4"

# Platform-specific (macOS)
core-graphics = "0.25"
core-foundation = "0.10"

# Platform-specific (Windows)
[workspace.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_Graphics_Gdi",
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
